# goit-pyweb-hw-13

./: .gitignore
contacts_api/: README.md  alembic.ini  pyproject.toml
contacts_api/alembic/versions/: 71e9d07272cb_add_username_to_user.py  a3f1992b8ae6_initial_schema.py
contacts_api/app/: crud.py  database.py  main.py  models.py  schemas.py
contacts_api/app/auth/: security.py
contacts_api/app/repository/: contacts.py  users.py
contacts_api/app/routes/: auth.py  contacts.py
contacts_api/app/services/: auth.py  cloudinary_config.py  mail.py
contacts_api/app/services/templates/: email_template.html
hw10_web/: pyproject.toml
hw10_web/project_quotes/app_quotes/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hw10_web/project_quotes/app_quotes/migrations/: 0001_initial.py
hw10_web/project_quotes/app_quotes/static/app_quotes/: style.css
hw10_web/project_quotes/app_quotes/templates/app_quotes/: about_author.html  author.html  base.html  index.html  quote.html  tag.html
hw10_web/project_quotes/app_quotes/templatetags/: extract_tags.py
hw10_web/project_quotes/project_quotes/: asgi.py  settings.py  urls.py  wsgi.py
hw10_web/project_quotes/users/: forms.py  views.py
hw10_web/project_quotes/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  signup.html
